Problem with next web not showing any news fixed. Two new news sources added: Crypto News and The Time. Now search results are sorted by date. Latest news are shown first

--- a/style.css
+++ b/style.css
@@ -142,7 +142,7 @@ h1 {
   top: -15px;
   z-index: 100;
   width: 100%;
-  background-color: rgba(196, 68, 127, 0.8);
+  background-color: rgba(233, 126, 206, 0.8);
   margin: 0;
   padding: 0;
 }
